fixed small typos

--- a/views/opening_page.erb
+++ b/views/opening_page.erb
@@ -1,6 +1,6 @@
 
 Please input the isbn you want to validate
 
-<form method = "post" name = "number">
+<form method = "post" action = "number">
 <input type = "text" name = "isbn">
 </form>
