added css and layout file

--- a/views/opening_page.erb
+++ b/views/opening_page.erb
@@ -1,6 +1,4 @@
 
-Please input the isbn you want to validate
-
 <form method = "post" action = "number">
-<input type = "text" name = "isbn">
+<input type = "TEXT" name = "isbn">Please input the isbn you want to validate
 </form>
