--- a/views/opening_page.erb
+++ b/views/opening_page.erb
@@ -1,4 +1,5 @@
 
 <form method = "post" action = "number">
-<input type = "TEXT" name = "isbn">Please input the isbn you want to validate
+<input type = "TEXT" name = "isbn">
+<input type = "submit" value = "enter">Please input the isbn you want to validate
 </form>
