--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,13 +1,16 @@
 <head>
 <link rel = "stylesheet" href = "css/style.css">
 </head>
-<header>ISBN VALIDATOR</header>
+<header>
+<div id = "headerbox">
+ISBN VALIDATOR
+</div>
 
 
 <body>
 <%=yield%>
 </body>
-
+</header>
 <footer>
 
 </footer>
