--- a/views/opening_page.erb
+++ b/views/opening_page.erb
@@ -1,5 +1,7 @@
-
+<div id = "text">
+Please input the isbn you want to validate
 <form method = "post" action = "number">
-<input type = "TEXT" name = "isbn">
-<input type = "submit" value = "enter">Please input the isbn you want to validate
+<input type = "TEXT" name = "isbn"><br>
+<input type = "submit" value = "enter">
 </form>
+</div>
