--- a/views/results.erb
+++ b/views/results.erb
@@ -1,3 +1,7 @@
-here is the results<br>
 
-<%=isbn%>    <%=results%>
+<div id = "text">
+	here is the results<br>
+		<div id = box>
+		<%=isbn%> <%=results%>
+		</div>
+</div>
