added button that leads to second route and started second route

--- a/views/opening_page.erb
+++ b/views/opening_page.erb
@@ -1,7 +1,15 @@
+
+
 <div id = "text">
 Please input the isbn you want to validate
 <form method = "post" action = "number">
 <input type = "TEXT" name = "isbn"><br>
 <input type = "submit" value = "enter">
 </form>
+
+
+<form method = "post" action = "csv">
+<input type = "submit" value = "test csv">
+</form>
+
 </div>
