have isbn numbers from csv file printing to page

--- a/views/csv_returns.erb
+++ b/views/csv_returns.erb
@@ -1,7 +1,5 @@
 heres csv file before validation
 
 <%csv_arrs.each do |row|%>
-	<%row.each do |isbn|%>
-		<%=isbn%>
-	<%end%>
+	<%=row[1]%><br>
 <%end%>
