added loop for validation page

--- a/views/validation.erb
+++ b/views/validation.erb
@@ -1,7 +1,7 @@
-here is isbn with validations
+here is isbn with validations<br>
 
 <%count = 0%>
 <%isbn_arr.each do |x|%>
-<%=x%> <%=valid_arr[count]%>
+<%=x%> <%=valid_arr[count]%><br>
 <%count += 1%>
 <%end%>
