final results exported to results.csv

--- a/views/csv_returns.erb
+++ b/views/csv_returns.erb
@@ -1,4 +1,6 @@
 heres csv file before validation
+
+<div id = "list">
 <form method = "post" action = "csv_run">
 <%csv_arrs.each do |row|%>
 	<%=row[1]%><br>
@@ -7,3 +9,4 @@ heres csv file before validation
 <%end%>
 <input type = "submit" value = "move on">
 </form>
+</div>
