--- a/views/results.erb
+++ b/views/results.erb
@@ -1,2 +1,17 @@
+Here is all the isbn so far
+<%bucket_isbn.each do |item|%>
+	<%=item%><br>
+<%end%>
+	<%last = bucket_isbn[-1].split(/,/)%>
+	<%count = last[0].to_i%>
+	<%count += 1%>
+	<%=count%>,<%=single_isbn[0]%>,<%=single_isbn[1]%>
+
+	<%bucket_isbn << "#{count},#{single_isbn[0]},#{single_isbn[1]}"%>
+
+<% s3 = Aws::S3::Resource.new(region: 'us-east-2')%>
+<% obj = s3.bucket("sms-isbn-bucket").object("isbn_bucket.csv") %>
+<% obj.put(body: bucket_isbn.to_s)%>
+
 
 
