--- a/views/one.erb
+++ b/views/one.erb
@@ -5,7 +5,7 @@
 		</div>
 </div>
 <form method = "post" action = "almost_done">
-<input type = "text" name = single_isbn[] value = "<%=isbn%>">
-<input type = "text" name = single_isbn[] value = "<%=results%>">
+<input type = "hidden" name = single_isbn[] value = "<%=isbn%>">
+<input type = "hidden" name = single_isbn[] value = "<%=results%>">
 <input type = "submit" value = "enter">
 </form>
