added final page that just pulls the and shows the bucket

--- a/views/results.erb
+++ b/views/results.erb
@@ -25,5 +25,8 @@ Here is all the isbn so far
   <%    obj.put(body: file)%>
 <%end%>
 
+<form method = "post" name = "final">
+<input type = "submit" value = "check the bucket">
+</form>
 
 
