added final page to show isbn straight from bucket

--- a/views/final.erb
+++ b/views/final.erb
@@ -1,4 +1,9 @@
+<div id = "text">
+	Heres the bucket:
+	<div id = "list">
 <%bucket_isbn = get_object()%>
 <%bucket_isbn.each do |item|%>
-	<%=item%>
-<%end%> 
+	<%=item%><br>
+<%end%>
+	</div>
+</div>
