--- a/views/results.erb
+++ b/views/results.erb
@@ -25,7 +25,7 @@ Here is all the isbn so far
   <%    obj.put(body: file)%>
 <%end%>
 
-<form method = "post" name = "final">
+<form method = "post" action = "final">
 <input type = "submit" value = "check the bucket">
 </form>
 
